@@ -43,7 +43,7 @@ CONFIG_SD_DATACRC=y
 CONFIG_ERROR_BUFFER_SIZE=100
 CONFIG_COMMAND_BUFFER_SIZE=120
 CONFIG_BUFFER_COUNT=15
-CONFIG_MAX_PARTITIONS=2
+CONFIG_MAX_PARTITIONS=4
 CONFIG_RTC_PCF8583=y
 CONFIG_RTC_DSRTC=y
 CONFIG_HAVE_IEEE=y
