@@ -54,7 +54,7 @@ CONFIG_SD_DATACRC=y
 CONFIG_ERROR_BUFFER_SIZE=100
 CONFIG_COMMAND_BUFFER_SIZE=120
 CONFIG_BUFFER_COUNT=6
-CONFIG_MAX_PARTITIONS=2
+CONFIG_MAX_PARTITIONS=4
 CONFIG_HAVE_IEC=y
 CONFIG_M2I=y
 CONFIG_P00CACHE=y
