@@ -12,6 +12,8 @@
         - persistent mini-filesystem in EEPROM
         - Maniac Mansion + Zak McKracken loaders
         - Sam's Journey loader
+        - allow comments in swap lists
+        - disable P00 header for .crt and .tcrt
 
 2012-02-26 - release 0.10.3
         - Bugfix: Un-break I2C display communication
